k8s/development-database-k8s.yaml.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development

---

# Deployment do Postgres
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: development
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc

---

# Service do Postgres
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: development
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
