k8s/development-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: development
spec:
  type: ClusterIP  # Pode ser ClusterIP, já que o Ingress vai expor
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: development
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: geraldobl58/api:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 512Mi

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: development
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
  - host: api.development.ogeraldoluiz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 80
  tls:
  - hosts:
    - api.development.ogeraldoluiz.com
    secretName: tls-cert-api-development
